# CSCI360

./: .gitignore  00-intro.md  01-Haskell.lhs  02-ADTs.lhs  03-polymorphism-lists.lhs  04-syntax-semantics.lhs  05-pretty-parse.lhs  06-parser-combinators.lhs  07-variables.lhs  08-errors.lhs  09-dynamic-types.lhs  10-static-types.lhs  11-IMP.lhs  Parsing.hs  Parsing2.hs  README.md  class-01-20.lhs  class-01-25.lhs  count.imp  err4.imp  factorial.imp  gradingcontract.md  gradingcontracteval1.md  gradingcontracteval2.md  greatest_cookie_destroyer.imp  test.hs  test.imp
Project-1/: ArithCompiler.lhs
Project-2/: .calc-hist  Calc.html  Calc.lhs  calc.cabal
Project-2/.stack-work/: stack.sqlite3
intercal-final/: Intercal.hs
lecture-notes/: class-01-20.hs  class-01-25.hs  class-01-27.hs  class-02-03.hs  class-02-10.hs  class-02-17.hs  class-02-27.hs  class-03-13.hs
lecture-notes/dist-newstyle/cache/: compiler
module12/: QuiltEDSL.lhs  quilt.cabal
module12/.stack-work/: stack.sqlite3
module12/.stack-work/ghci/c00a877f/: cabal_macros.h
module12/.stack-work/install/x86_64-linux/150ad291b0fee8859c67036335e81b871bb1b547d7296c42d460e7d008c50021/8.10.4/lib/x86_64-linux-ghc-8.10.4/quilt-0.1.0.0-1J7G8safrBsGEnBXkursDJ/: QuiltEDSL.dyn_hi  QuiltEDSL.hi
module12/.stack-work/install/x86_64-linux/150ad291b0fee8859c67036335e81b871bb1b547d7296c42d460e7d008c50021/8.10.4/pkgdb/: package.cache  quilt-0.1.0.0-1J7G8safrBsGEnBXkursDJ.conf
module13/: QuiltEDSLDeep.lhs  quilt.cabal  stack.yaml
module13/.stack-work/: stack.sqlite3
module13/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
quilt/: LICENSE  Quilt.hs  quilt.cabal  quilt_history.txt  stack.yaml
quilt/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
(+6 files in other folders)
