cabal-version:      2.4
name:               quilt
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             
maintainer:         

-- A copyright notice.
-- copyright:
category:           Graphics

executable quilt
    main-is:          QuiltREPL.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Quilt

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.1.0 && <4.19, colour, parsec, mtl, containers, haskeline, JuicyPixels

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010
